updated the make app script