@@ -16,4 +16,4 @@ JVM_ARGS+="--add-opens=java.base/java.util.concurrent=ALL-UNNAMED "
 
 jpackage --input ../build/main/	 --main-jar Simbrain.jar --dest ../dist --name "Simbrain" \
 	 --app-version 3.05 --icon simbrain.icns \
-	 --java-options "-Duser.dir=\$APPDIR --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+	 --java-options $JVM_ARGS
